objects/CRMfusionDBR101__Scenario__c.object
<CustomObject>
    <customHelpPage>CRMfusionDBR101__DB_Help</customHelpPage>
    <fields>
        <fullName>CRMfusionDBR101__Allow_Block_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the Match on Insert Action is set to &quot;Do Not Insert&quot; and an insert is blocked, users will have the option to bypass the block if all blocking scenarios have this option enabled.</inlineHelpText>
        <label>Allow Block Bypassing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Apex_Handler__c</fullName>
        <inlineHelpText>If the &quot;Match on Insert Action&quot; or &quot;Match on Update Action&quot; is set to &quot;Custom Apex Code&quot; then an Apex class must be selected to perform the processing.</inlineHelpText>
        <label>Custom Apex Handler</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Block_Related_Matches__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Normally only Leads are blocked by Lead to Account or Lead to Contact scenarios.  If this option is enabled, Accounts and Contacts are blocked if they match an existing record as well.</inlineHelpText>
        <label>Block Account/Contact Matches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Bypass_Security__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this box is checked, Salesforce sharing rules will be ignored when attempting to find duplicate records for this scenario.  If you&apos;re not currently using security for Accounts, Contacts or Leads, this option will have no effect.</inlineHelpText>
        <label>Bypass Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Create_Task__c</fullName>
        <inlineHelpText>If set to &quot;No&quot;, no tasks are created when a duplicate match is found.
If set to &quot;Yes - Scenario Owner&quot;, a task is created and assigned to the scenario owner.
If set to &quot;Yes - Current User&quot;, a task is created and assigned to the current user.</inlineHelpText>
        <label>Create Task for Warning</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes - Current User</fullName>
                </value>
                <value>
                    <fullName>Yes - Scenario Owner</fullName>
                </value>
                <value>
                    <fullName>Yes - Current User and Scenario Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Deployed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If a scenario is not marked as deployed, it is ignored by DupeBlocker and will not prevent duplicates  or create any warnings and will be ignored by the Key Builder.</inlineHelpText>
        <label>Deployed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Disable_Hash_Calculation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this box will disable automatic hash key size calculation.  Please contact support before disabling automatic hash key size calculation.</description>
        <inlineHelpText>Checking this box will disable automatic hash key size calculation. Please contact support before disabling automatic hash key size calculation.</inlineHelpText>
        <label>Disable Hash Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Duplicate_Warning_Count__c</fullName>
        <inlineHelpText>The current count of all duplicate warnings for this scenario.</inlineHelpText>
        <label>Duplicate Warning Count</label>
        <summaryForeignKey>CRMfusionDBR101__Duplicate_Warning__c.CRMfusionDBR101__Scenario__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Duplicates_Blocked__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The total number of duplicates prevented by this scenario.</inlineHelpText>
        <label>Duplicates Blocked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Duplicates_Merged__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total number of duplicates that were identified by this scenario and then merged or converted.</inlineHelpText>
        <label>Duplicates Merged</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Enable_Dual_Filters__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this option is checked, the scenario will use a separate set of filters for matching new records (Source Filters) to existing records (Target Filters).  If this isn&apos;t checked, the standard filters are applied to both new and existing records.</inlineHelpText>
        <label>Enable Dual Filters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Error_Message__c</fullName>
        <inlineHelpText>The error message displayed in the event that an object matches a &quot;Do Not Insert&quot; scenario.
This is required for &quot;Do Not Insert&quot; scenarios.</inlineHelpText>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Hash_Key_Bits__c</fullName>
        <defaultValue>12</defaultValue>
        <description>This field determines the number of bits we use for our hash key.  This is directly related to how much storage space is used for the scenario and is auto calculated by the key builder.  Please do not change this without contacting support.</description>
        <inlineHelpText>This field determines the number of bits we use for our hash key and is automatically calculated by the key builder. Please do not change this without contacting support.</inlineHelpText>
        <label>Hash Key Bits</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Last_Key_Rebuild__c</fullName>
        <label>Last Key Rebuild</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Match_on_Insert_Action__c</fullName>
        <inlineHelpText>Specifies the action DupeBlocker takes when an inserted record matches an existing record based on this scenario.  See the documentation for a full description of each action.</inlineHelpText>
        <label>Match on Insert Action</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CRMfusionDBR101__Scenario_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Do Not Insert</fullName>
                </value>
                <value>
                    <fullName>Redirect To Existing</fullName>
                </value>
                <value>
                    <fullName>Report Duplicate</fullName>
                    <default>true</default>
                    <label>Report Duplicate</label>
                </value>
                <value>
                    <fullName>Do Nothing</fullName>
                </value>
                <value>
                    <fullName>Auto-Merge</fullName>
                </value>
                <value>
                    <fullName>Auto-Convert Lead</fullName>
                </value>
                <value>
                    <fullName>Custom Apex Code</fullName>
                </value>
                <value>
                    <fullName>Redirect to VisualForce Page</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Match_on_Insert_Result__c</fullName>
        <description>Do Not Insert - Prevents creation of duplicates if a match is found.
Redirect to Existing - Automatically redirects to the existing matched object.
Report Duplicate - Create a duplicate warning but allow the object to be created.
Do Nothing - Take no action when a possible duplicate is detected.</description>
        <inlineHelpText>Do Not Insert - Prevents creation of duplicates if a match is found.
Redirect to Existing - Automatically redirects to the existing matched object.
Report Duplicate - Create a duplicate warning and allow object creation.
Do Nothing - Take no action.</inlineHelpText>
        <label>Match on Insert Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Do Not Insert</fullName>
                </value>
                <value>
                    <fullName>Redirect To Existing</fullName>
                </value>
                <value>
                    <fullName>Report Duplicate</fullName>
                    <default>true</default>
                    <label>Report Duplicate</label>
                </value>
                <value>
                    <fullName>Do Nothing</fullName>
                </value>
                <value>
                    <fullName>Auto-Merge</fullName>
                </value>
                <value>
                    <fullName>Auto-Convert Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Match_on_Update_Action__c</fullName>
        <inlineHelpText>Specifies the action DupeBlocker takes when an updated record matches another record based on this scenario. See the documentation for a full description of each action.</inlineHelpText>
        <label>Match on Update Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Do Not Update</fullName>
                </value>
                <value>
                    <fullName>Report Duplicate</fullName>
                    <default>true</default>
                    <label>Report Duplicate</label>
                </value>
                <value>
                    <fullName>Do Nothing</fullName>
                </value>
                <value>
                    <fullName>Custom Apex Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Match_on_Update_Result__c</fullName>
        <description>Do Not Insert - Prevents edits if the edit would result in a duplicate.
Report Duplicate - Create a duplicate warning and allow the edited data to be saved.
Do Nothing - Take no action.</description>
        <inlineHelpText>Do Not Insert - Prevents edits if the edit would result in a duplicate.
Report Duplicate - Create a duplicate warning and allow the edited data to be saved.
Do Nothing - Take no action.</inlineHelpText>
        <label>Match on Update Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Do Not Update</fullName>
                </value>
                <value>
                    <fullName>Report Duplicate</fullName>
                    <default>true</default>
                    <label>Report Duplicate</label>
                </value>
                <value>
                    <fullName>Do Nothing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Max_Blocks_Shown__c</fullName>
        <inlineHelpText>If this is a blocking scenario, limit the number of blocking duplicates shown for this scenario.  This number cannot be higher than 20.</inlineHelpText>
        <label>Max Blocks Shown</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Person_Account_Scenario__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this option if this scenario is for person accounts.  This applies to both to both Account and Lead to Account scenarios.</description>
        <inlineHelpText>Enable this option if this scenario is for person accounts.  This applies to both to both Account and Lead to Account scenarios.</inlineHelpText>
        <label>Person Account Scenario</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Potential_Duplicate_Record_Count__c</fullName>
        <inlineHelpText>The current count of all potential duplicates for this scenario.</inlineHelpText>
        <label>Potential Duplicate Record Count</label>
        <summaryForeignKey>CRMfusionDBR101__Potential_Duplicate__c.CRMfusionDBR101__Scenario__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Rebuild_Needed__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Checked: A settings change or rule change has rendered this scenario&apos;s match data obsolete.  Click the &quot;Rebuild Scenario Keys&quot; button to update the match data.
Unchecked:  All keys are up-to-date, no action necessary.</inlineHelpText>
        <label>Rebuild Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Rebuild_Process_ID__c</fullName>
        <description>This is for internal use only.  The field needs to be visible to the system administrator profile.</description>
        <label>Batch Rebuild Process ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Scenario_Number__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Scenario Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Scenario_Rule_Count__c</fullName>
        <description>This is just used internally to verify that a scenario has rules before building keys.</description>
        <label>Scenario Rule Count</label>
        <summaryForeignKey>CRMfusionDBR101__Scenario_Rule__c.CRMfusionDBR101__Scenario__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Scenario_Type__c</fullName>
        <label>Scenario Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Lead to Contact</fullName>
                </value>
                <value>
                    <fullName>Lead to Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__VisualForce_Handler__c</fullName>
        <inlineHelpText>If the Match on Insert Action is set to &quot;Redirect to VisualForce Page&quot; then a custom VisualForce page must be selected.</inlineHelpText>
        <label>VisualForce Redirection Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DupeBlocker Scenario</label>
    <listViews>
        <fullName>CRMfusionDBR101__AccountScenarios</fullName>
        <columns>NAME</columns>
        <columns>CRMfusionDBR101__Scenario_Type__c</columns>
        <columns>CRMfusionDBR101__Deployed__c</columns>
        <columns>CRMfusionDBR101__Rebuild_Needed__c</columns>
        <columns>CRMfusionDBR101__Duplicate_Warning_Count__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRMfusionDBR101__Scenario_Type__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <label>Account Scenarios</label>
    </listViews>
    <listViews>
        <fullName>CRMfusionDBR101__All</fullName>
        <columns>NAME</columns>
        <columns>CRMfusionDBR101__Scenario_Type__c</columns>
        <columns>CRMfusionDBR101__Deployed__c</columns>
        <columns>CRMfusionDBR101__Rebuild_Needed__c</columns>
        <columns>CRMfusionDBR101__Duplicate_Warning_Count__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CRMfusionDBR101__Match_on_Insert_Action__c</columns>
        <columns>CRMfusionDBR101__Match_on_Update_Action__c</columns>
        <filterScope>Everything</filterScope>
        <label>* All *</label>
    </listViews>
    <listViews>
        <fullName>CRMfusionDBR101__ContactScenarios</fullName>
        <columns>NAME</columns>
        <columns>CRMfusionDBR101__Scenario_Type__c</columns>
        <columns>CRMfusionDBR101__Deployed__c</columns>
        <columns>CRMfusionDBR101__Rebuild_Needed__c</columns>
        <columns>CRMfusionDBR101__Duplicate_Warning_Count__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRMfusionDBR101__Scenario_Type__c</field>
            <operation>equals</operation>
            <value>Contact</value>
        </filters>
        <label>Contact Scenarios</label>
    </listViews>
    <listViews>
        <fullName>CRMfusionDBR101__LeadScenarios</fullName>
        <columns>NAME</columns>
        <columns>CRMfusionDBR101__Scenario_Type__c</columns>
        <columns>CRMfusionDBR101__Deployed__c</columns>
        <columns>CRMfusionDBR101__Rebuild_Needed__c</columns>
        <columns>CRMfusionDBR101__Duplicate_Warning_Count__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRMfusionDBR101__Scenario_Type__c</field>
            <operation>equals</operation>
            <value>Lead</value>
        </filters>
        <label>Lead Scenarios</label>
    </listViews>
    <listViews>
        <fullName>CRMfusionDBR101__LeadtoAccountScenarios</fullName>
        <columns>NAME</columns>
        <columns>CRMfusionDBR101__Scenario_Type__c</columns>
        <columns>CRMfusionDBR101__Deployed__c</columns>
        <columns>CRMfusionDBR101__Rebuild_Needed__c</columns>
        <columns>CRMfusionDBR101__Duplicate_Warning_Count__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRMfusionDBR101__Scenario_Type__c</field>
            <operation>equals</operation>
            <value>Lead to Account</value>
        </filters>
        <label>Lead to Account Scenarios</label>
    </listViews>
    <listViews>
        <fullName>CRMfusionDBR101__LeadtoContactScenarios</fullName>
        <columns>NAME</columns>
        <columns>CRMfusionDBR101__Scenario_Type__c</columns>
        <columns>CRMfusionDBR101__Deployed__c</columns>
        <columns>CRMfusionDBR101__Rebuild_Needed__c</columns>
        <columns>CRMfusionDBR101__Duplicate_Warning_Count__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRMfusionDBR101__Scenario_Type__c</field>
            <operation>equals</operation>
            <value>Lead to Contact</value>
        </filters>
        <label>Lead to Contact Scenarios</label>
    </listViews>
    <listViews>
        <fullName>CRMfusionDBR101__ScenariosNeedingaRebuild</fullName>
        <columns>NAME</columns>
        <columns>CRMfusionDBR101__Scenario_Type__c</columns>
        <columns>CRMfusionDBR101__Deployed__c</columns>
        <columns>CRMfusionDBR101__Rebuild_Needed__c</columns>
        <columns>CRMfusionDBR101__Duplicate_Warning_Count__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CRMfusionDBR101__Last_Key_Rebuild__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRMfusionDBR101__Rebuild_Needed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CRMfusionDBR101__Deployed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Scenarios Needing a Rebuild</label>
    </listViews>
    <nameField>
        <label>Scenario Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DupeBlocker Scenarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CRMfusionDBR101__Custom_Apex_Handler</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR(  TEXT( CRMfusionDBR101__Match_on_Insert_Action__c ) = &apos;Custom Apex Code&apos;, TEXT( CRMfusionDBR101__Match_on_Update_Action__c ) = &apos;Custom Apex Code&apos; ), ISBLANK(  CRMfusionDBR101__Apex_Handler__c ) )</errorConditionFormula>
        <errorDisplayField>CRMfusionDBR101__Apex_Handler__c</errorDisplayField>
        <errorMessage>If the Match on Insert Action or Match on Update Action is set to &quot;Custom Apex Code&quot; then an Apex class must be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRMfusionDBR101__Do_Not_Insert_Error_Message_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( CRMfusionDBR101__Match_on_Insert_Action__c, &apos;Do Not Insert&apos; ),
OR( ISNULL( CRMfusionDBR101__Error_Message__c  ), LEN(  TRIM( CRMfusionDBR101__Error_Message__c ) )  = 0 ) )</errorConditionFormula>
        <errorDisplayField>CRMfusionDBR101__Error_Message__c</errorDisplayField>
        <errorMessage>If &quot;Match on Insert Action&quot; is set to &quot;Do Not Insert&quot;, you must provide an error message.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRMfusionDBR101__Do_Not_Update_Error_Message_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( CRMfusionDBR101__Match_on_Update_Action__c, &apos;Do Not Update&apos; ),
OR( ISNULL( CRMfusionDBR101__Error_Message__c  ), LEN(  TRIM( CRMfusionDBR101__Error_Message__c ) )  = 0 ) )</errorConditionFormula>
        <errorDisplayField>CRMfusionDBR101__Error_Message__c</errorDisplayField>
        <errorMessage>If &quot;Match on Update Action&quot; is set to &quot;Do Not Update&quot;, you must provide an error message.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRMfusionDBR101__Hash_Key_Bit_Size</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISNULL( CRMfusionDBR101__Hash_Key_Bits__c ), OR( CRMfusionDBR101__Hash_Key_Bits__c &lt; 8,  CRMfusionDBR101__Hash_Key_Bits__c &gt; 24 ) )</errorConditionFormula>
        <errorDisplayField>CRMfusionDBR101__Hash_Key_Bits__c</errorDisplayField>
        <errorMessage>Hash Key Bits must be between 8 and 24.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRMfusionDBR101__Max_Blocks_Limit</fullName>
        <active>true</active>
        <description>Limit the Max Blocks to &gt;= 1 and &lt;= 20.</description>
        <errorConditionFormula>AND( NOT( ISNULL( CRMfusionDBR101__Max_Blocks_Shown__c ) ), OR( CRMfusionDBR101__Max_Blocks_Shown__c &lt; 1, CRMfusionDBR101__Max_Blocks_Shown__c &gt; 20 ) )</errorConditionFormula>
        <errorDisplayField>CRMfusionDBR101__Max_Blocks_Shown__c</errorDisplayField>
        <errorMessage>If a value is set, it must be between 1 and 20.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRMfusionDBR101__Person_Account_Flag_Check</fullName>
        <active>true</active>
        <description>Verify that this is an Account or Lead to Account scenario before allowing the person account option to be checked.</description>
        <errorConditionFormula>AND( CRMfusionDBR101__Person_Account_Scenario__c, NOT( OR( TEXT( CRMfusionDBR101__Scenario_Type__c ) = &apos;Account&apos;, TEXT( CRMfusionDBR101__Scenario_Type__c ) = &apos;Lead to Account&apos; ) ) )</errorConditionFormula>
        <errorDisplayField>CRMfusionDBR101__Person_Account_Scenario__c</errorDisplayField>
        <errorMessage>The &apos;Person Account Scenario&apos; option can only be enabled for Account or Lead to Account scenarios.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRMfusionDBR101__VF_Redirection_Handler</fullName>
        <active>true</active>
        <errorConditionFormula>AND( TEXT( CRMfusionDBR101__Match_on_Insert_Action__c ) = &apos;Redirect to VisualForce Page&apos;, ISBLANK(  CRMfusionDBR101__VisualForce_Handler__c ) )</errorConditionFormula>
        <errorDisplayField>CRMfusionDBR101__VisualForce_Handler__c</errorDisplayField>
        <errorMessage>When the Match on Insert Action is set to &quot;Redirect to VisualForce Page&quot; then a value must be set for the VisualForce Redirection Page.</errorMessage>
    </validationRules>
</CustomObject>